fix: align-items value
start value has mixed support, consider using flex-start instead

--- a/foodys/src/styles/_patches.scss
+++ b/foodys/src/styles/_patches.scss
@@ -68,5 +68,5 @@
 .dashboard__secondary-panel {
   display: flex;
   justify-content: flex-end;
-  align-items: start;
+  align-items: flex-start;
 }
